Resolved another issue with mapper